[package]
name = "jhhi"
version = "0.1.0"
authors = ["lloydmeta <lloydmeta@gmail.com>"]
edition = "2018"
description = "Ingests Java heap histograms to Elasticsearch"
license = "MIT"
keywords = ["Java", "heap", "histogram", "ingest", "elasticsearch"]
repository = "https://github.com/lloydmeta/jhhi"

[[bin]]
name = "jhhi"
test = false
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
# When elasticsearch upgrades to use a version of reqwest that supports tokio 0.3, use `rt-multi-threaded`
tokio = { version = "0.2", features = ["fs", "macros", "rt-threaded"] }
jheap_histo = { path = "jheap_histo", version = "0.1.0" }
structopt = "0.3"
anyhow = "1.0"
elasticsearch = { version = "7.10.0-alpha.1", features = ["rustls-tls"] }
serde = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
pretty_env_logger = "0.4"
indicatif = "0.15"
[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
